Merge branch fixes